# TritNet

./: .gitignore  CMakeLists.txt  README.md  README.txt  my_profile_report.nsys-rep
include/: TritNet.hpp
python/: fwd_verification_BT.py  fwd_verification_TT.py  output.txt  python_output.txt  torch_version
python/bintern/: fwd_verification_BT.py  parent_script.py  torch_fwd.py
src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
src/bintern/TritNet/: constructors.cpp  forward_pass.cu  fwd.cu  init.cpp  prop_kernel.cu  prop_layer.cu  propagate.cu  random_init.cpp  useful_funcs.cpp
src/bintern/dependencies/include/: activations.hpp  matrix.hpp  weights.hpp
src/bintern/dependencies/src/: activations.cpp  matrix.cu  weights.cpp
src/terntern/dependencies/include/: activations.hpp  matrix.hpp  weights.hpp
src/terntern/dependencies/src/: matrix.cu
src/uint4_t/: matmul.cu
